--- a/src/paylink.config.json
+++ b/src/paylink.config.json
@@ -2,25 +2,25 @@
   "theme": "minimalist-dark-theme",
 
   "properties": {
-    "name": "Daniel Castillo",
-    "description": "Frontend web developer and tireless creator",
-    "alt": "Photo of Daniel Castillo",
-    "hero": "./images/daniel-castillo.png"
+    "name": "Henry Alejandro Gomez Machin",
+    "description": "Trabajador Independiente,Emprendedor",
+    "alt": "Photo of Henry Gomez",
+    "hero": "./images/photo_2022-12-04_15-36-38.jpg"
   },
 
   "Social": [
-    { "label": "Email", "value": "bx-envelope", "link": "mailto:dlcastillo3015@gmail.com" },
-    { "label": "Link", "value": "bx-link", "link": "https://dlcastillop.vercel.app" },
-    { "label": "GitHub", "value": "bxl-github", "link": "https://github.com/dlcastillop" },
-    { "label": "Twitter", "value": "bxl-twitter", "link": "https://twitter.com/dlcastillop" },
-    { "label": "LinkedIn", "value": "bxl-linkedin", "link": "https://linkedin.com/in/dlcastillop" },
-    { "label": "Instagram", "value": "bxl-instagram", "link": "https://instagram.com/dlcastillop" },
+    { "label": "Email", "value": "bx-envelope", "link": "hgomezmachin@gmail.com" },
+    { "label": "Link", "value": "bx-link", "link": "" },
+    { "label": "GitHub", "value": "bxl-github", "link": "" },
+    { "label": "Twitter", "value": "bxl-twitter", "link": "https://twitter.com/HenryGM93" },
+    { "label": "LinkedIn", "value": "bxl-linkedin", "link": "" },
+    { "label": "Instagram", "value": "bxl-instagram", "link": "https://instagram.com/henrygomez93" },
     { "label": "Discord", "value": "bxl-discord", "link": "" },
     { "label": "Facebook", "value": "bxl-facebook", "link": "" },
     { "label": "Medium", "value": "bxl-medium", "link": "" },
     { "label": "Pinterest", "value": "bxl-pinterest", "link": "" },
     { "label": "Snapchat", "value": "bxl-snapchat", "link": "" },
-    { "label": "Telegram", "value": "bxl-telegram", "link": "" },
+    { "label": "Telegram", "value": "bxl-telegram", "link": "https://t.me/Anaking_Skywalker" },
     { "label": "TikTok", "value": "bxl-tiktok", "link": "" },
     { "label": "Twitch", "value": "bxl-twitch", "link": "" },
     { "label": "Vimeo", "value": "bxl-vimeo", "link": "" },
@@ -33,7 +33,7 @@
     {
       "id": "btc",
       "label": "Bitcoin",
-      "value": "bc1qejahgjmqnmyrw7jvn0d7evfdq6ssjl3wq7hfle",
+      "value": "",
       "img": "./images/payments/btc.svg"
     },
     {
@@ -57,13 +57,13 @@
     {
       "id": "eth",
       "label": "Ethereum",
-      "value": "0x59C864f658caD68A19a97499755080c056079988",
+      "value": "0xffa3e5104c008c2394949fafebadb9109c286f6c",
       "img": "./images/payments/eth.svg"
     },
     {
       "id": "ltc",
       "label": "Litecoin",
-      "value": "",
+      "value": "MESrN7UC4uGQgBeTeBibVkCqgZY8XwK1rD",
       "img": "./images/payments/ltc.svg"
     },
     {
@@ -74,14 +74,14 @@
     },
     {
       "id": "usdt",
-      "label": "USDT",
-      "value": "",
+      "label": "USDT-TRC20",
+      "value": "TX4N9N3TnLFHZ7FLMJXEAEJn9k8RmvYo7n",
       "img": "./images/payments/usdt.svg"
     },
     {
       "id": "qvapay",
       "label": "QvaPay",
-      "value": "https://qvapay.com/payme/dlcastillop",
+      "value": "https://qvapay.com/payme/hgomezmachin@gmail.com",
       "img": "./images/payments/qvapay.svg"
     },
     {
