--- a/src/paylink.config.json
+++ b/src/paylink.config.json
@@ -33,7 +33,7 @@
     {
       "id": "btc",
       "label": "Bitcoin",
-      "value": "",
+      "value": "3PztfjWNByMgRxSGbDyFSZg1soAYrVMy6U",
       "img": "./images/payments/btc.svg"
     },
     {
