--- a/src/paylink.config.json
+++ b/src/paylink.config.json
@@ -16,7 +16,7 @@
     { "label": "LinkedIn", "value": "bxl-linkedin", "link": "" },
     { "label": "Instagram", "value": "bxl-instagram", "link": "https://instagram.com/henrygomez93" },
     { "label": "Discord", "value": "bxl-discord", "link": "" },
-    { "label": "Facebook", "value": "bxl-facebook", "link": "" },
+    { "label": "Facebook", "value": "bxl-facebook", "link": "https://www.facebook.com/hgomezmachin" },
     { "label": "Medium", "value": "bxl-medium", "link": "" },
     { "label": "Pinterest", "value": "bxl-pinterest", "link": "" },
     { "label": "Snapchat", "value": "bxl-snapchat", "link": "" },
