--- a/src/paylink.config.json
+++ b/src/paylink.config.json
@@ -2,7 +2,7 @@
   "theme": "minimalist-dark-theme",
 
   "properties": {
-    "name": "Henry Alejandro Gomez Machín",
+    "name": "Henry Alejandro Gómez Machín",
     "description": "Trabajador Independiente,Emprendedor",
     "alt": "Photo of Henry Gomez",
     "hero": "./images/photo_2022-12-04_15-36-38.jpg"
